2004-02-22  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/Makefile.am:
	* help/it/gnobots2.xml:
	* help/it/gnobots2-it.omf:
	* help/it/legal.xml:
	* help/it/Makefile.am: Restored the old Italian documentation.

2004-02-19  Callum McKenzie  <callum@physics.otago.ac.nz>

	* properties.c (show_properties_dialog): Typo. Fixes bug #134442.

2004-02-14  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/es/gnobots2.xml: 
	* help/es/gnobots2-es.omf:
	* help/es/Makefile.am:
	* help/es/legal.xml:	
	* help/Makefile.am: Yet another conversion of an old translated
	document by someone who doesn't understand the language.

	* help/da/gnobots2.xml: Remove accidental reference to gtali in
	the appname entity.

2004-02-12  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/Makefile.am
	* help/da/Makefile.am
	* help/da/gnobots2-da.omf: 
	* help/da/legal.xml:	
	* help/da/gnobots2.xml: Converted the old Danish html docs to
	docbook. The actual content has not been updated (except where cut
	and paste could fix it). Note that I do not speak Danish.

	* help/C/gnobots2.xml: Rearranged the key-controls section to
	reflect the new default.

2004-02-11  Richard Hoelscher  <rah@rahga.com>

	* properties.c (gconf_set_background_color): Set saving background
	color as a 12-digit hex triplet. Bug #134179.

2004-02-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* menu.c (about_cb): translator_credits ->
	translator-credits.

2004-02-07  Callum McKenzie  <callum@physics.otago.ac.nz>

	* properties.c: Set the keypad to be the standard set of
	keys. "Use Standard Robots Keys" has been renamed "Use Original
	Robots Keys". Reversed the key labels appropriately. Also
	capitalisation fixes as per HIG. Added tooltips to the checkboxes.

	* gnobots2.schemas.in: Added schemas for all the keys and set the
	default to be the numeric keypad.

2004-01-31  Callum McKenzie  <callum@physics.otago.ac.nz>

	* properties.c: Fix a crasher where list_view was not set to NULL