@@ -4,13 +4,11 @@ General:
   - Update the version info for all docs.
 
 Aisleriot:
-        - Stock pile click/drag/release = click bug.
-	- Are the Italian docs in the right place ?
+	- Are the Italian docs in the right place (no)?
 
 Blackjack:
 
 Gataxx:
-        - Crasher (132438) if info comes through.
         
 Glines:
 
@@ -23,8 +21,7 @@ Gnobots2:
 Gnome-stones:
 
 Gnometris:
-        - Write some documentation.
-        - Key response bugs ? (103787)
+      - Re-check the docs.
 
 Gnomine:
 
@@ -159,9 +156,9 @@ Gnometris:
         - Make the pieces scalable.
         - Drag and drop background.
         - Sound (see bug 80665, but we can't use those sounds) ?               
-        - Write some documentation.
 	- Back out bug 130654 when the drawing code is rewritten (and
 	  also make the preferences universally enabled).
+        - Revisit slow block bugs ? (103787)
 
 Gnomine:
         - Check flag counting code and whether this is in fact bug
