@@ -233,6 +233,8 @@ glines/help/C/Makefile
 gdk-card-image/Makefile
 gnometris/Makefile
 gnometris/pix/Makefile
+gnometris/help/Makefile
+gnometris/help/C/Makefile
 gnobots2/Makefile
 gnobots2/help/Makefile
 gnobots2/help/C/Makefile
