@@ -1,2 +1,4 @@
 Makefile
 Makefile.in
+omf_timestamp
+gnobots2-it.omf.out
