@@ -1,0 +1,6 @@
+Makefile.in
+Makefile
+omf_timestamp
+index.html
+gtali
+gtali-C.omf.out
