@@ -1,0 +1,8 @@
+figdir = 
+docname = gnometris
+lang = C
+omffile = gnometris-C.omf
+entities = legal.xml
+include $(top_srcdir)/xmldocs.make
+dist-hook: app-dist-hook
+
