@@ -1,0 +1,25 @@
+<?xml version="1.0" standalone="no"?>
+<omf>
+  <resource>
+    <creator>
+      Callum McKenzie
+    </creator>
+    <maintainer>
+      Callum McKenzie
+    </maintainer>
+    <title>
+     Gnometris Manual
+    </title>
+    <date>
+      2004-02-23
+    </date>
+    <subject category="GNOME|Games"/>
+    <description>
+      Gnometris is the classic game of interlocking quadrominoes.
+    </description>
+    <format mime="text/xml" dtd="-//OASIS//DTD DocBook XML V4.1.2//EN"/>
+    <identifier url="gnometris.xml"/>
+    <language code="C"/>
+    <rights type="GNU FDL" license.version="1.1" holder="Callum McKenzie"/>
+  </resource>
+</omf>
