@@ -1,0 +1,277 @@
+<?xml version="1.0"?>
+<!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN"
+    "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
+  <!ENTITY legal SYSTEM "legal.xml">
+  <!ENTITY appversion "2.6">
+  <!ENTITY manrevision "1.0">
+  <!ENTITY date "February 2004">
+  <!ENTITY app "<application>Gnometris</application>">
+  <!ENTITY appname "Gnometris">
+  <!ENTITY version "2.6"> 
+]>
+
+<!-- 
+      (Do not remove this comment block.)
+  Maintained by the GNOME Documentation Project
+  http://developer.gnome.org/projects/gdp
+  Template version: 2.0 beta
+  Template last modified Feb 12, 2002
+-->
+
+<!-- =============Document Header ============================= -->
+
+<article id="index" lang="en">
+<!-- please do not change the id; for translations, change lang to -->
+<!-- appropriate code -->
+  <articleinfo>
+    <title>&app; Manual V&manrevision;</title>
+    <copyright>
+      <year>2004</year>
+      <holder>Callum McKenzie</holder>
+    </copyright>
+
+  <!-- translators: uncomment this:
+
+  <copyright>
+   <year>2000</year>
+   <holder>ME-THE-TRANSLATOR (Latin translation)</holder>
+  </copyright>
+
+   -->
+<!-- An address can be added to the publisher information.  If a role is 
+     not specified, the publisher/author is the same for all versions of the 
+     document.  -->
+    <publisher> 
+      <publishername> GNOME Documentation Project </publishername> 
+    </publisher> 
+
+   &legal;
+   <!-- This file  contains link to license for the documentation (GNU FDL), and 
+        other legal stuff such as "NO WARRANTY" statement. Please do not change 
+	any of this. -->
+	
+    <authorgroup> 
+      <author> 
+	<firstname>Callum</firstname> 
+	<surname>McKenzie</surname> 
+	<affiliation> 
+	  <address> <email>callum@physics.otago.ac.nz</email> </address> 
+	</affiliation> 
+      </author> 
+<!-- This is appropriate place for other contributors: translators,
+      maintainers,  etc. Commented out by default.
+       <othercredit role="translator">
+	<firstname>Latin</firstname> 
+	<surname>Translator 1</surname> 
+	<affiliation> 
+	  <orgname>Latin Translation Team</orgname> 
+	  <address> <email>translator@gnome.org</email> </address> 
+	</affiliation>
+	<contrib>Latin translation</contrib>
+      </othercredit>
+-->
+    </authorgroup>
+
+    <revhistory>
+      <revision> 
+	<revnumber>&appname; Manual V&manrevision;</revnumber> 
+	<date>&date;</date> 
+	<revdescription> 
+	  <para role="author">Callum McKenzie
+	    <email>callum@physics.otago.ac.nz</email>
+	  </para>
+	  <para role="publisher">GNOME Documentation Project</para>
+	</revdescription> 
+      </revision> 
+    </revhistory> 
+
+    <releaseinfo>This manual describes version &appversion; of &appname;.
+    </releaseinfo>
+    <!-- The following feedback information only applies to appliactions
+    listed in bugzilla.gnome.org and bugzilla.ximian.com. For other
+    applications, please provide your own feedback info or remove thsi
+    section altogether -->
+    <legalnotice> 
+      <title>Feedback</title> 
+      <para>To report a bug or make a suggestion regarding the &app; application or
+	this manual, follow the directions in the 
+	<ulink url="ghelp:gnome-feedback"
+	  type="help">GNOME Feedback Page</ulink>. 
+      </para>
+<!-- Translators may also add here feedback address for translations -->
+    </legalnotice>
+
+  </articleinfo>
+
+  <indexterm zone="index"> 
+    <primary>GNOME Tali</primary> 
+  </indexterm>
+
+ <!-- ============= Document Body ============================= -->
+
+  <sect1 id="intro">
+    <title>Introduction</title>
+
+ <para>Gnometris is a variation on the classic falling blocks game:
+ Tetris. The goal is to make full rows of blocks out of falling
+ pieces. It is like a active, and somewhat random, jig-saw puzzle.</para>
+
+<para>Each piece consists of four blocks arranged in various configurations. A
+random piece appears at the top of the screen and begins to fall. You
+can rotate it and move it from side to side. By stacking successive
+blocks you start filling up the screen. Once a full line is created it
+disappears and points are scored. If you fail to make full lines the
+blocks stack higher and higher until the reach the top of the
+screen. When they reach the top the game is over.</para>
+
+  </sect1>
+  <sect1 id="playing">
+    <title>Playing Gnometris</title>
+
+<para>When play starts you are presented with a blank window. Pieces
+appear at the top, in the center. The left and right arrow keys shift
+the piece sideways. You use the up arrow key to rotate the block. You
+can also hurry the piece towards the bottom by either using the down
+arrow key, or by using the space bar. The down key speeds up the
+piece, while the space bar sends it directly to the bottom.</para>
+
+<para>If you need to pause the game then you can either select pause off the game menu or use the pause key itself. An option to end the game immediately is also available from the game menu.</para>
+
+<para>You score by one of two methods. Clearing rows is the main method, but you also score points by dropping pieces quickly (i.e. the space bar or the down arrow). This later method is a good way to score points quickly, but you run a high risk of making mistakes.</para>
+
+<para>When enough points have been scored the level goes up and the speed of the game increases. The highest level is 10, where you have just over a second to move each piece into position.</para>
+
+<para>To help with planning you placement of pieces, the box in the top right corner shows the next piece that will appear.</para>
+
+<para>If you need more of a challenge then you can elect to start at a high level or partially fill the playing area with random blocks to give yourself something to work on.</para>
+
+</sect1>
+
+<sect1 id="preferences">
+<title>Preferences</title>
+<para>The preferences dialog gives you three groups of options.</para>
+
+<sect2>
+<title>Setup</title>
+<para>These options are for making game-play more challenging. You can choose the number of rows to pre-fill, and the density you pre-fill them to. The starting level can also be changed here.</para>
+</sect2>
+
+<sect2>
+<title>Operation</title> <para>These check-boxes change the behaviour of the
+game. The preview next block option determines whether the preview box
+operates or not. Turning this off makes the game harder. Use random
+block colors can also make the game harder if you have learnt to
+associate the colours and the shapes. Whether you rotate the blocks
+counter-clockwise or clockwise is purely a matter of choice and will
+depend largely on any similar games you have become used to.</para>
+</sect2>
+
+<sect2>
+<title>Theme</title>
+<para>
+These options change the appearance of the game. Note that some of the
+blocks have a different size than the others. If you find the game too
+small (or too large) on your monitor try changing to a larger (or
+smaller) style of block.
+</para>
+</sect2>
+
+<para>Note that the preferences cannot be changed during the game.</para>
+</sect1>
+
+
+ <sect1 id="bugs">
+  <title>Known Bugs and Limitations</title>
+  <para>
+   This game has plenty of bugs. What program doesn't ? Please report any bugs you find in <ulink url="http://bugzilla.gnome.org" type="http">GNOME Bugzilla.</ulink> This is also the appropriate place for suggestions and feature requests.
+  </para>
+ </sect1>
+
+
+<!-- ============= Authors ================================ -->
+
+ <sect1 id="authors">
+  <title>Authors</title>
+  <para>
+   <application>Gnometris</application> was written by J. Marcin Gorycki
+   (<email>janusz.gorycki@intel.com</email>). Please send 
+   all comments, suggestions, and bug
+   reports to the <ulink url="http://bugzilla.gnome.org" type="http">GNOME
+   bug tracking database</ulink>.  (Instructions for submitting bug
+   reports can be found <ulink
+   url="http://bugs.gnome.org/Reporting.html" type="http">
+   on-line</ulink>.)  You can also use <application>Bug Report
+   Tool</application> (<command>bug-buddy</command>), available in the
+   <guisubmenu>Utilities</guisubmenu> submenu of <guimenu>Main
+   Menu</guimenu>, for submitting bug reports.
+  </para>
+
+  <para>
+   This manual was written by Callum McKenzie
+   (<email>callum@physics.otago.ac.nz</email>). Please
+   send all comments and suggestions regarding this manual to the
+   <ulink type="http"
+   url="http://developer.gnome.org/projects/gdp">GNOME Documentation
+   Project</ulink> by sending an email to
+   <email>docs@gnome.org</email>. You can also add your comments
+   online by using the <ulink type="http"
+   url="http://developer.gnome.org/projects/gdp/doctable/">GNOME
+   Documentation Status Table</ulink>.
+  </para>
+
+  <!-- For translations: uncomment this:
+
+  <para>
+   Latin translation was done by ME
+   (<email>MYNAME@MYADDRESS</email>). Please send all  comments  and
+   suggestions regarding this translation to SOMEWHERE.
+  </para>
+
+  -->
+
+ </sect1>
+
+
+ <!-- ============= Application License ============================= -->
+
+ <sect1 id="license">
+  <title>License</title>
+  <para>
+   This program is free software; you can redistribute it and/or
+   modify it under the terms of the  <ulink type="help" url="gnome-help:gpl">
+    <citetitle>GNU General Public License</citetitle></ulink> as
+   published by the Free Software Foundation; 
+   either version 2 of the License, or (at your option) any later
+   version.
+  </para>
+  <para>
+   This program is distributed in the hope that it will be useful, but
+   WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   <citetitle>GNU General Public License</citetitle> for more details.
+  </para>
+  <para>
+   A copy of the <citetitle>GNU General Public License</citetitle> is
+   included as an appendix to the <citetitle>GNOME Users
+   Guide</citetitle>.  You may also obtain a copy of the
+   <citetitle>GNU General Public License</citetitle> from the Free
+   Software Foundation by visiting <ulink type="http"
+   url="http://www.fsf.org">their Web site</ulink> or by writing to
+   <address>
+    Free Software Foundation, Inc.
+    <street>59 Temple Place</street> - Suite 330
+    <city>Boston</city>, <state>MA</state> <postcode>02111-1307</postcode>
+    <country>USA</country>
+   </address>
+  </para>
+ </sect1>
+</article>
+
+
+
+
+
+
+
+
+
